# game-development-with-rust-and-webassembly

./: LICENSE  README  index.html  package-lock.json  package.json  vite.config.ts
src/: main.ts
src/wasm/: Cargo.toml
src/wasm/src/: lib.rs
