[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
console_error_panic_hook = "0.1.7"
rand = "0.8.5"

[dependencies.getrandom]
version = "0.2.3"
features = ["js"]

[dependencies.web-sys]
version = "0.3.69"
features = ["console", "Window", "Document", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d"]

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
futures = "0.3.30"
js-sys = "0.3.69"
wasm-bindgen-futures = "0.4.42"
